Update catalog title and product information

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Ferretería — Catálogo</title>
+    <title>Ferreline catalogo</title> 
 </head>
+
 <body>
-  <h1>Ferretería</h1>
-  <p>Catálogo de productos — pedidos por WhatsApp</p>
+    <h1 title="Titulo">Bienvenido al Inventario</h1>
+    <p title="introduccion">En esta seccion usted encontrara la informacion de los productos en stock</p>
+     
+            <ul>
+                   <li>tornillos hexagonales</li>
+                   <li>tornillos de cabeza plana</li>    
+             </ul>
+     
+                   <a title="instagram" href="https://www.instagram.com/ferreline2025/" target="_blank">Instagram</a><br>
 
-  <h2>🔧 Destornilladores</h2>
-  <p>Philips N°2 — $4500</p>
-  <a href="https://wa.me/54XXXXXXXXX?text=Hola! Me interesa el destornillador Philips N°2">Consultar</a>
-
-  <h2>🔩 Tornillos</h2>
-  <p>Caja tornillos 3mm x 20 — $3200</p>
-  <a href="https://wa.me/54XXXXXXXXX?text=Consulta por caja de tornillos 3x20">Consultar</a>
-
-  <h2>🧰 Llaves</h2>
-  <p>Llave francesa — $8500</p>
-  <a href="https://wa.me/54XXXXXXXXX?text=Consulta por llave francesa">Consultar</a>
+                  <a title="twitter" href="enlaces.html">Twitter</a> <br>
 
 </body>
+
 </html>
